# python-project-setup

./: README.md
#PROJECT-SPACE#/: .coveragerc  .env_vars  .gitignore  .pypirc  .sonarcloud.properties  .travis.yml  FIND_PROJ_REPLACES.bat  README.md  pytest.ini  requirements.txt  setup.cfg
#PROJECT-SPACE#/.github/workflows/: ci_master.yml
#PROJECT-SPACE#/Requirements/: requirements-dev-local.txt  requirements-release-unpinned.txt  requirements-testing.txt
#PROJECT-SPACE#/dev/: profile_PYTHON_PROG.bat  run_linters.bat  run_linters.sh  run_test_server.bat  run_test_server.sh  run_tests.bat  run_tests.sh
#PROJECT-SPACE#/dev/DevSetup/: GitSetup.bat
#PROJECT-SPACE#/dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
#PROJECT-SPACE#/dev/Packaging/: upload_to_pypi.bat  upload_to_pypi_test.bat
#PROJECT-SPACE#/dev/Testing/: RunPytest.bat  RunPytest.sh
#PROJECT-SPACE#/scripts/: profile_PYTHON_PROG.bat  profile_PYTHON_PROG.bat.ERIC  run_tests.bat  run_tests.bat.ERIC
#PROJECT-SPACE#/scripts/Linting/: RunBandit.bat  RunMyPy.bat  RunPycodestyle.bat  RunPydocstyle.bat  RunPylint.bat
#PROJECT-SPACE#/tests/#PROJECT-NAME#/: test_project_logger.py
