[bdist_wheel]
universal = true

[metadata]
name = "#PROJECT-NAME#"
version = v0.1
author = #PYPI-AUTHOR#
author-email = #PYPI-EMAIL#
home-page = https://github.com/#GITHUB-ACCOUNT#/#GITHUB-REPO#
description = #PYPI-DESC#
description-file =
    README.md
    CHANGELOG.md
license = GNU GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
package_dir=
    =#PROJECT-NAME#
packages=find:

[options.packages.find]
where=#PROJECT-NAME#
