[bdist_wheel]
universal = true

[metadata]
name = "#PROJECT-NAME#"
version = v0.1
author = #PYPI-AUTHOR#
author-email = #PYPI-EMAIL#
home-page = https://github.com/#GITHUB-ACCOUNT#/#GITHUB-REPO#
description = #PYPI-DESC#
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
packages=find:

[options.packages.find]
exclude =
    tests
